force-app/main/default/objects/ICAP__c/ICAP__c.object-meta.xml
<CustomObject>
    <label>ICAP</label>
    <nameField>
        <label>ICAP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ICAP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>