force-app/main/default/objects/ICAP__c/fields/Adh_sion__c.field-meta.xml
<CustomField>
    <fullName>Adh_sion__c</fullName>
    <label>Adhésion</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>