force-app/main/default/objects/ICAP__c/fields/Compr_hension__c.field-meta.xml
<CustomField>
    <fullName>Compr_hension__c</fullName>
    <label>Compréhension</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>